--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-test/build.gradle
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-test/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
 	testIntegrationCompile group: "com.liferay", name: "com.liferay.arquillian.extension.junit.bridge", version: "1.0.5"
+	testIntegrationCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 	testIntegrationCompile project(":private:apps:forms-and-workflow:portal-workflow:portal-workflow-kaleo-forms-api")
 	testIntegrationCompile project(":private:apps:forms-and-workflow:portal-workflow:portal-workflow-kaleo-forms-service")
 }
