--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/build.gradle
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/build.gradle
@@ -21,6 +21,15 @@ dependencies {
 	provided project(":private:apps:forms-and-workflow:portal-workflow:portal-workflow-kaleo-forms-service")
 }
 
+mergeLang {
+	sourceDirs = [
+		"../../../../../apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content",
+		"../../../../../apps/forms-and-workflow/portal-workflow/portal-workflow-lang/src/main/resources/content",
+		"../../../../../apps/web-experience/staging/staging-lang/src/main/resources/content",
+		"src/main/resources/content"
+	]
+}
+
 liferay {
 	deployDir = file("${liferayHome}/osgi/modules")
 }
