--- a/modules/private/apps/foundation/portal-security-audit/portal-security-audit-router/build.gradle
+++ b/modules/private/apps/foundation/portal-security-audit/portal-security-audit-router/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: "com.liferay.lang.merger"
+
 dependencies {
 	provided group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
 	provided group: "com.liferay", name: "com.liferay.portal.configuration.metatype", version: "2.0.0"
@@ -5,6 +7,13 @@ dependencies {
 	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+}
+
+mergeLang {
+	sourceDirs = [
+		"../portal-security-audit-event-generators/src/main/resources/content",
+		"src/main/resources/content"
+	]
 }
 
 liferay {
