--- a/modules/private/apps/foundation/portal-security-audit/portal-security-audit-web/build.gradle
+++ b/modules/private/apps/foundation/portal-security-audit/portal-security-audit-web/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: "com.liferay.lang.merger"
+
 dependencies {
 	provided group: "com.liferay", name: "com.liferay.application.list.api", version: "2.0.0"
 	provided group: "com.liferay", name: "com.liferay.portal.security.audit.api", version: "2.0.0"
@@ -7,6 +9,13 @@ dependencies {
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	provided project(":private:apps:foundation:portal-security-audit:portal-security-audit-storage-api")
+}
+
+mergeLang {
+	sourceDirs = [
+		"../../../../../apps/foundation/monitoring/monitoring-web/src/main/resources/content",
+		"src/main/resources/content"
+	]
 }
 
 liferay {
