LPS-65168 Lang key

--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language.properties
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language.properties
@@ -6,6 +6,7 @@ add-workflow=Add Workflow
 assign-form=Assign Form
 complete-form=Complete Form
 current-entry=Current Entry
+delete-form=Delete Form
 do-you-want-to-proceed-with-the-update=Do you want to proceed with the update?
 export-only-approved-submissions=Export only approved submissions.
 field-set=Field Set
