--- a/modules/apps/foundation/portal-cache/portal-cache-ehcache/build.gradle
+++ b/modules/apps/foundation/portal-cache/portal-cache-ehcache/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-	provided group: "com.liferay", name: "com.liferay.portal.cache", version: "2.0.0"
+	provided project(":apps:foundation:portal-cache:portal-cache");
 	provided group: "com.liferay", name: "com.liferay.portal.cache.ehcache.provider", version: "2.0.0"
 	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 	provided group: "net.sf.ehcache", name: "ehcache", version: "2.8.3"
